--- a/create-product.html
+++ b/create-product.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Single Product - ShopGrids Bootstrap 5 eCommerce HTML Template.</title>
+    <title>ShopGrids - Bootstrap 5 eCommerce HTML Template.</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.3.0.css" />
     <link rel="stylesheet" href="assets/css/tiny-slider.css" />
     <link rel="stylesheet" href="assets/css/glightbox.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/product-details.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
 
@@ -87,17 +88,26 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="top-end">
-                            <div class="user">
+                            <!-- khi đăng nhập thành công thì xóa class hidden này -->
+                            <div class="user hidden" >
                                 <i class="lni lni-user"></i>
                                 Hello
                             </div>
+                            <!--  -->
+
                             <ul class="user-login">
                                 <li>
-                                    <a href="login.html">Sign In</a>
+                                    <a href="./login.html">Sign In</a>
                                 </li>
                                 <li>
-                                    <a href="register.html">Register</a>
+                                    <a href="./register.html">Register</a>
                                 </li>
+
+                                <!-- chỉ dành khi đã đăng nhâp . khi đăng nhập thành công thì xóa class hidden này đi-->
+                                <li class="hidden">
+                                    <a href="./index.html">Logout</a>
+                                </li>
+                                <!-- -------------------------- -->
                             </ul>
                         </div>
                     </div>
@@ -124,12 +134,8 @@
                                 <div class="search-select">
                                     <div class="select-position">
                                         <select id="select1">
-                                            <option selected>All</option>
-                                            <option value="1">option 01</option>
-                                            <option value="2">option 02</option>
-                                            <option value="3">option 03</option>
-                                            <option value="4">option 04</option>
-                                            <option value="5">option 05</option>
+                                            <option value="1" selected>Product name</option>
+                                            <option value="2">Product type</option>
                                         </select>
                                     </div>
                                 </div>
@@ -175,12 +181,12 @@
                                                 <a href="javascript:void(0)" class="remove" title="Remove this item"><i
                                                         class="lni lni-close"></i></a>
                                                 <div class="cart-img-head">
-                                                    <a class="cart-img" href="product-details.html"><img
+                                                    <a class="cart-img" href="./product-details.html"><img
                                                             src="assets/images/header/cart-items/item1.jpg" alt="#"></a>
                                                 </div>
 
                                                 <div class="content">
-                                                    <h4><a href="product-details.html">
+                                                    <h4><a href="./product-details.html">
                                                             Apple Watch Series 6</a></h4>
                                                     <p class="quantity">1x - <span class="amount">$99.00</span></p>
                                                 </div>
@@ -189,11 +195,11 @@
                                                 <a href="javascript:void(0)" class="remove" title="Remove this item"><i
                                                         class="lni lni-close"></i></a>
                                                 <div class="cart-img-head">
-                                                    <a class="cart-img" href="product-details.html"><img
+                                                    <a class="cart-img" href="./product-details.html"><img
                                                             src="assets/images/header/cart-items/item2.jpg" alt="#"></a>
                                                 </div>
                                                 <div class="content">
-                                                    <h4><a href="product-details.html">Wi-Fi Smart Camera</a></h4>
+                                                    <h4><a href="./product-details.html">Wi-Fi Smart Camera</a></h4>
                                                     <p class="quantity">1x - <span class="amount">$35.00</span></p>
                                                 </div>
                                             </li>
@@ -226,31 +232,31 @@
                         <div class="mega-category-menu">
                             <span class="cat-button"><i class="lni lni-menu"></i>All Categories</span>
                             <ul class="sub-category">
-                                <li><a href="product-grids.html">Electronics <i class="lni lni-chevron-right"></i></a>
+                                <li><a href="./product-details.html">Electronics <i class="lni lni-chevron-right"></i></a>
                                     <ul class="inner-sub-category">
-                                        <li><a href="product-grids.html">Digital Cameras</a></li>
-                                        <li><a href="product-grids.html">Camcorders</a></li>
-                                        <li><a href="product-grids.html">Camera Drones</a></li>
-                                        <li><a href="product-grids.html">Smart Watches</a></li>
-                                        <li><a href="product-grids.html">Headphones</a></li>
-                                        <li><a href="product-grids.html">MP3 Players</a></li>
-                                        <li><a href="product-grids.html">Microphones</a></li>
-                                        <li><a href="product-grids.html">Chargers</a></li>
-                                        <li><a href="product-grids.html">Batteries</a></li>
-                                        <li><a href="product-grids.html">Cables & Adapters</a></li>
+                                        <li><a href="./product-details.html">Digital Cameras</a></li>
+                                        <li><a href="./product-details.html">Camcorders</a></li>
+                                        <li><a href="./product-details.html">Camera Drones</a></li>
+                                        <li><a href="./product-details.html">Smart Watches</a></li>
+                                        <li><a href="./product-details.html">Headphones</a></li>
+                                        <li><a href="./product-details.html">MP3 Players</a></li>
+                                        <li><a href="./product-details.html">Microphones</a></li>
+                                        <li><a href="./product-details.html">Chargers</a></li>
+                                        <li><a href="./product-details.html">Batteries</a></li>
+                                        <li><a href="./product-details.html">Cables & Adapters</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="product-grids.html">accessories</a></li>
-                                <li><a href="product-grids.html">Televisions</a></li>
-                                <li><a href="product-grids.html">best selling</a></li>
-                                <li><a href="product-grids.html">top 100 offer</a></li>
-                                <li><a href="product-grids.html">sunglass</a></li>
-                                <li><a href="product-grids.html">watch</a></li>
-                                <li><a href="product-grids.html">man’s product</a></li>
-                                <li><a href="product-grids.html">Home Audio & Theater</a></li>
-                                <li><a href="product-grids.html">Computers & Tablets </a></li>
-                                <li><a href="product-grids.html">Video Games </a></li>
-                                <li><a href="product-grids.html">Home Appliances </a></li>
+                                <li><a href="./product-details.html">accessories</a></li>
+                                <li><a href="./product-details.html">Televisions</a></li>
+                                <li><a href="./product-details.html">best selling</a></li>
+                                <li><a href="./product-details.html">top 100 offer</a></li>
+                                <li><a href="./product-details.html">sunglass</a></li>
+                                <li><a href="./product-details.html">watch</a></li>
+                                <li><a href="./product-details.html">man’s product</a></li>
+                                <li><a href="./product-details.html">Home Audio & Theater</a></li>
+                                <li><a href="./product-details.html">Computers & Tablets </a></li>
+                                <li><a href="./product-details.html">Video Games </a></li>
+                                <li><a href="./product-details.html">Home Appliances </a></li>
                             </ul>
                         </div>
                         <!-- End Mega Category Menu -->
@@ -266,49 +272,44 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ms-auto">
                                     <li class="nav-item">
-                                        <a href="index.html" aria-label="Toggle navigation">Home</a>
+                                        <a href="index.html" class="active" aria-label="Toggle navigation">Home</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-2" aria-controls="navbarSupportedContent"
                                             aria-expanded="false" aria-label="Toggle navigation">Pages</a>
                                         <ul class="sub-menu collapse" id="submenu-1-2">
-                                            <li class="nav-item"><a href="about-us.html">About Us</a></li>
-                                            <li class="nav-item"><a href="faq.html">Faq</a></li>
-                                            <li class="nav-item"><a href="login.html">Login</a></li>
-                                            <li class="nav-item"><a href="register.html">Register</a></li>
-                                            <li class="nav-item"><a href="mail-success.html">Mail Success</a></li>
-                                            <li class="nav-item"><a href="404.html">404 Error</a></li>
+                                            <li class="nav-item"><a href="index.html">Home</a></li>
+
+
+                                            <!-- chỉ dành cho user cho quyền admin. Khi có quyền admin thì xóa class hidden này đi -->
+                                            <li class="nav-item hidden"><a href="manage-products.html">Manager Product</a></li>
+                                            <li class="nav-item hidden" ><a href="login.html">CreateProduct</a></li>
+                                            <li class="nav-item hidden" ><a href="manage-feedbacks.html">Manage Feedbacks</a></li>
+                                            <li class="nav-item hidden" ><a href="register.html">Register</a></li>
+                                            <!--   ------------------------------------------   -->
+
+
+                                            <li class="nav-item"><a href="feedback.html">FeedBack</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="dd-menu active collapsed" href="javascript:void(0)"
-                                            data-bs-toggle="collapse" data-bs-target="#submenu-1-3"
-                                            aria-controls="navbarSupportedContent" aria-expanded="false"
-                                            aria-label="Toggle navigation">Shop</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-3">
-                                            <li class="nav-item"><a href="product-grids.html">Shop Grid</a></li>
-                                            <li class="nav-item"><a href="product-list.html">Shop List</a></li>
-                                            <li class="nav-item active"><a href="product-details.html">shop Single</a>
-                                            </li>
-                                            <li class="nav-item"><a href="cart.html">Cart</a></li>
-                                            <li class="nav-item"><a href="checkout.html">Checkout</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
+
+                                    <!-- chỉ dành cho user cho quyền admin. Khi có quyền admin thì xóa class hidden này đi -->
+                                    <li class="nav-item hidden">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-4" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Blog</a>
+                                            aria-expanded="false" aria-label="Toggle navigation">Manager</a>
                                         <ul class="sub-menu collapse" id="submenu-1-4">
-                                            <li class="nav-item"><a href="blog-grid-sidebar.html">Blog Grid Sidebar</a>
+                                            <li class="nav-item"><a href="manager-products.html">Manager Product</a>
                                             </li>
-                                            <li class="nav-item"><a href="blog-single.html">Blog Single</a></li>
-                                            <li class="nav-item"><a href="blog-single-sidebar.html">Blog Single
-                                                    Sibebar</a></li>
+                                            <li class="nav-item"><a href="create-product.html">Create Product</a></li>
+                                            <li class="nav-item"><a href="manage-feedbacks.html">Manage Feedbacks</a></li>
                                         </ul>
                                     </li>
+                                    <!--  -->
+
                                     <li class="nav-item">
-                                        <a href="contact.html" aria-label="Toggle navigation">Contact Us</a>
+                                        <a href="feedback.html" aria-label="Toggle navigation">FeedBack</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -339,30 +340,9 @@
                 </div>
             </div>
         </div>
-        <!-- Start Header Bottom -->
+        <!-- End Header Bottom -->
     </header>
     <!-- End Header Area -->
-
-    <!-- Start Breadcrumbs -->
-    <div class="breadcrumbs">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="breadcrumbs-content">
-                        <h1 class="page-title">Single Product</h1>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-12">
-                    <ul class="breadcrumb-nav">
-                        <li><a href="index.html"><i class="lni lni-home"></i> Home</a></li>
-                        <li><a href="index.html">Shop</a></li>
-                        <li>Single Product</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Breadcrumbs -->
 
     <!-- Start Item Details -->
     <section class="item-details section">
