--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.3.0.css" />
     <link rel="stylesheet" href="assets/css/tiny-slider.css" />
     <link rel="stylesheet" href="assets/css/glightbox.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
 
@@ -86,17 +88,26 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="top-end">
-                            <div class="user">
+                            <!-- khi đăng nhập thành công thì xóa class hidden này -->
+                            <div class="user hidden" >
                                 <i class="lni lni-user"></i>
                                 Hello
                             </div>
+                            <!--  -->
+
                             <ul class="user-login">
                                 <li>
-                                    <a href="login.html">Sign In</a>
+                                    <a href="./login.html">Sign In</a>
                                 </li>
                                 <li>
-                                    <a href="register.html">Register</a>
+                                    <a href="./register.html">Register</a>
                                 </li>
+
+                                <!-- chỉ dành khi đã đăng nhâp . khi đăng nhập thành công thì xóa class hidden này đi-->
+                                <li class="hidden">
+                                    <a href="./index.html">Logout</a>
+                                </li>
+                                <!-- -------------------------- -->
                             </ul>
                         </div>
                     </div>
@@ -123,12 +134,8 @@
                                 <div class="search-select">
                                     <div class="select-position">
                                         <select id="select1">
-                                            <option selected>All</option>
-                                            <option value="1">option 01</option>
-                                            <option value="2">option 02</option>
-                                            <option value="3">option 03</option>
-                                            <option value="4">option 04</option>
-                                            <option value="5">option 05</option>
+                                            <option value="1" selected>Product name</option>
+                                            <option value="2">Product type</option>
                                         </select>
                                     </div>
                                 </div>
@@ -272,40 +279,37 @@
                                             data-bs-target="#submenu-1-2" aria-controls="navbarSupportedContent"
                                             aria-expanded="false" aria-label="Toggle navigation">Pages</a>
                                         <ul class="sub-menu collapse" id="submenu-1-2">
-                                            <li class="nav-item"><a href="about-us.html">About Us</a></li>
-                                            <li class="nav-item"><a href="faq.html">Faq</a></li>
-                                            <li class="nav-item"><a href="login.html">Login</a></li>
-                                            <li class="nav-item"><a href="register.html">Register</a></li>
-                                            <li class="nav-item"><a href="mail-success.html">Mail Success</a></li>
-                                            <li class="nav-item"><a href="404.html">404 Error</a></li>
+                                            <li class="nav-item"><a href="index.html">Home</a></li>
+
+
+                                            <!-- chỉ dành cho user cho quyền admin. Khi có quyền admin thì xóa class hidden này đi -->
+                                            <li class="nav-item hidden"><a href="manage-products.html">Manager Product</a></li>
+                                            <li class="nav-item hidden" ><a href="login.html">CreateProduct</a></li>
+                                            <li class="nav-item hidden" ><a href="manage-feedbacks.html">Manage Feedbacks</a></li>
+                                            <li class="nav-item hidden" ><a href="register.html">Register</a></li>
+                                            <!--   ------------------------------------------   -->
+
+
+                                            <li class="nav-item"><a href="feedback.html">FeedBack</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
-                                            data-bs-target="#submenu-1-3" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Shop</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-3">
-                                            <li class="nav-item"><a href="./product-details.html">Shop Grid</a></li>
-                                            <li class="nav-item"><a href="product-list.html">Shop List</a></li>
-                                            <li class="nav-item"><a href="./product-details.html">shop Single</a></li>
-                                            <li class="nav-item"><a href="cart.html">Cart</a></li>
-                                            <li class="nav-item"><a href="checkout.html">Checkout</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
+
+                                    <!-- chỉ dành cho user cho quyền admin. Khi có quyền admin thì xóa class hidden này đi -->
+                                    <li class="nav-item hidden">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-4" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Blog</a>
+                                            aria-expanded="false" aria-label="Toggle navigation">Manager</a>
                                         <ul class="sub-menu collapse" id="submenu-1-4">
-                                            <li class="nav-item"><a href="blog-grid-sidebar.html">Blog Grid Sidebar</a>
+                                            <li class="nav-item"><a href="manager-products.html">Manager Product</a>
                                             </li>
-                                            <li class="nav-item"><a href="blog-single.html">Blog Single</a></li>
-                                            <li class="nav-item"><a href="blog-single-sidebar.html">Blog Single
-                                                    Sibebar</a></li>
+                                            <li class="nav-item"><a href="create-product.html">Create Product</a></li>
+                                            <li class="nav-item"><a href="manage-feedbacks.html">Manage Feedbacks</a></li>
                                         </ul>
                                     </li>
+                                    <!--  -->
+
                                     <li class="nav-item">
-                                        <a href="contact.html" aria-label="Toggle navigation">Contact Us</a>
+                                        <a href="feedback.html" aria-label="Toggle navigation">FeedBack</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
